test/files/neg/delambdafy_t6260_method.check
delambdafy_t6260_method.scala:3: error: bridge generated for member method apply: (bx: Object)Object in class map$extension1
which overrides method apply: (v1: Object)Object in trait Function1
clashes with definition of the member itself;
both have erased type (bx: Object)Object
    ((bx: Box[X]) => new Box(f(bx.x)))(this)
                  ^
delambdafy_t6260_method.scala:8: error: bridge generated for member method apply: (bx: Object)Object in class map21
which overrides method apply: (v1: Object)Object in trait Function1
clashes with definition of the member itself;
both have erased type (bx: Object)Object
    ((bx: Box[X]) => new Box(f(bx.x)))(self)
                  ^
two errors found
